--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Getaway Shootout</title>
     <script src="https://files.twoplayergames.org/files/games/other/Getaway_Shootout/Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "https://files.twoplayergames.org/files/games/other/Getaway_Shootout/Build/GetawayShootoutTwoPlayerGamesOrg.json", {width: 800, height: 600});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "/GetawayFullscreenBuild.json", {width: 800, height: 600});
     </script>
   </head>
   <body>
