--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="#">Startsida</a>
-  <a href="videos.html">Funny videos</a>
+  <a href="videos">Funny videos</a>
   <a href="#">Funny games</a>
   <a href="#">Giveaway</a>
 </div>
