--- a/videos.html
+++ b/videos.html
@@ -92,7 +92,7 @@ body {
 <span style="font-size:30px;cursor:pointer;color:white;z-index:10;position:fixed;top:1%;left:1%" onclick="swapNav()" id="menuButton">&#9776;</span>
 
 <div id="mySidenav" class="sidenav">
-  <a href="index.html">Startsida</a>
+  <a href="/">Startsida</a>
   <a href="#">Funny videos</a>
   <a href="#">Funny games</a>
   <a href="#">Giveaway</a>
