--- a/index.html
+++ b/index.html
@@ -1,129 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: "Lato";
-  margin:0;
-}
 
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-  white-space: nowrap;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #111;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a:hover {
-  background: #ddd;
-  color: black;
-}
-
-.main {
-  padding: 16px;
-  margin-top: 30px;
-  height: 1500px; /* Used in this example to enable scrolling */
-}
-</style>
+<style></style>
 </head>
 <body>
-  
-<div>
-  
-</div>
-
-<div class="navbar">
-  <p style="color:#111;">e</p>
-</div>
-
-<span style="font-size:30px;cursor:pointer;color:white;z-index:10;position:fixed;top:1%;left:1%" onclick="swapNav()" id="menuButton">&#9776;</span>
-
-<div id="mySidenav" class="sidenav">
-  <a href="#">Startsida</a>
-  <a href="videos">Funny videos</a>
-  <a href="#">Funny games</a>
-  <a href="#">Giveaway</a>
-</div>
-
-<div class="main">
-  <p>Here is only funny stuff!</p>
-</div>
-
-<script>
-
-var navOpen = false;
-function swapNav() {
-  if (navOpen) {
-    closeNav();
-    navOpen = false;
-  }
-  else {
-    openNav();
-    navOpen = true;
-  }
-}
-
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-}
-
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-}
-</script>
-   
+  <b>I destroyed this page lmao</b>
 </body>
 </html>
