--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-
-<style></style>
-</head>
-<body>
-  <b>I destroyed this page lmao</b>
-</body>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | House of Hazards</title>
+    <script src="https://files.twoplayergames.org/files/games/o1/House_of_Hazards/Build/UnityLoader.js"></script>
+    <script>
+      UnityLoader.instantiate("unityContainer", "https://files.twoplayergames.org/files/games/o1/House_of_Hazards/Build/HouseOfHazardsTwoPlayerGames.json");
+    </script>
+  </head>
+  <body>
+    <div id="unityContainer" style="width: 100%; height: 100%; margin: 0"></div>
+  </body>
 </html>
