--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 100%; height: 100%; margin: 0"></div>
+    <div id="unityContainer" style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;"></div>
   </body>
 </html>
