--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="toast.ico" />
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | House of Hazards</title>
+    <title>House of Hazards</title>
     <script src="https://files.twoplayergames.org/files/games/o1/House_of_Hazards/Build/UnityLoader.js"></script>
     <script>
       UnityLoader.instantiate("unityContainer", "https://files.twoplayergames.org/files/games/o1/House_of_Hazards/Build/HouseOfHazardsTwoPlayerGames.json");
