--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>House of Hazards</title>
-    <script src="https://files.twoplayergames.org/files/games/o1/House_of_Hazards/Build/UnityLoader.js"></script>
+    <script src="UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "https://files.twoplayergames.org/files/games/o1/House_of_Hazards/Build/HouseOfHazardsTwoPlayerGames.json");
+      UnityLoader.instantiate("unityContainer", "HouseOfHazardsTwoPlayerGames.json");
     </script>
   </head>
   <body>
